app/assets/stylesheets/scaffolds.scss
body {
  background-color: #fff;
  color: #333;
  margin: 33px; }

body, p, ol, ul, td {
  font-family: verdana, arial, helvetica, sans-serif;
  font-size: 13px;
  line-height: 18px; 
  text-align: center;
  background-color: #ebebeb;
}

.navbar {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  background-color:#22c7d6;
  color: #ffffff;
  font-family: Arial, Helvetica, sans-serif;
  width: 100%;
}

.logo {
  text-align: left;
  padding-left: 20px;
}

.login {
  text-align: right;
  padding-right: 20px;
}

.main-button{
  background-color: #e8b425;
  color: white;
  text-decoration: none;
  font-size: 30px;
  padding: 10px 500px;
  text-align: center;
  display: inline-block;
  border-radius: 10px;
  margin-top: 25px;
  margin-bottom: 25px;  
}

.main-button:hover{
  background-color:#9c7919;
  color: white;
  text-decoration: none;
  font-size: 30px;
  padding: 10px 500px;
  text-align: center;
  display: inline-block;
  border-radius: 15px;
  margin-top: 25px;
  margin-bottom: 25px;
}

.button{
  background-color: #189933;
  color: white;
  text-decoration: none;
  padding: 10px 10px;
  text-align: center;
  display: inline-block;
  border-radius: 10px;
}

.button:hover{
  background-color: #226e32;
  color: white;
  text-decoration: none;
  padding: 10px 10px;
  text-align: center;
  display: inline-block;
  border-radius: 15px;
}

.login-portal{
  color: black;
  font-family: Arial, Helvetica, sans-serif;
  border: black;
  border-style: solid;
  border-width: 1px;
  padding: 10px 10px 10px 10px;
  width: 50%;
  border-radius: 10px;
  box-shadow: 5px 5px #888888;
  text-align: center;
  margin: auto;
  margin-top: 10px;
  margin-bottom: 10px;
}

.table{
  text-align: center;
  margin: auto;
  background-color: #cfd1cf;
  padding: 10px 10px 10px 10px;
  border-radius: 10px;
}

pre {
  background-color: #eee;
  padding: 10px;
  font-size: 11px; }

th {
  padding-bottom: 5px; }

td {
  padding: 0 5px 7px; }

div.field,
div.actions {
  margin-bottom: 10px; }

#notice {
  color: green; }

.field_with_errors {
  padding: 2px;
  background-color: red;
  display: table;
  margin: auto;
  text-align: center; 
}

#error_explanation {
  border: 2px solid red;
  margin: auto;
  background-color: #f0f0f0; }

#error_explanation h2 {
  padding: 5px 5px 5px 15px;
  font-size: 12px;
  margin: auto;
  background-color: #c00;
  color: #fff; }

#error_explanation ul li {
  font-size: 12px;
  list-style: square; }

label {
  display: block; }

